--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -217,12 +217,22 @@ hr {
 .box1, .box2, .box3, .box4, .box5, .box6 {
 	width: 420px;
 	border: 1px solid black;
-	height: 230px;
+	height: 220px;
 	margin: 20px 0px;
 	background-color: #F3F3F3;
 	padding: 20px;
 }
 
 .box-buttons {
-	margin: 30px 0px;
+	margin: 20px 0px;
+	background-color: white;
+	font-size: 8pt;
+	border-radius: 6px;
+	padding: 10px 40px;
+	box-shadow: none;
+	border: 1px solid black;
+}
+
+.lower-section {
+	display: flex;
 }
