--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -235,4 +235,24 @@ hr {
 
 .lower-section {
 	display: flex;
+	justify-content: space-between;
+}
+
+.lower-section p {
+	padding: 0px 30px 0px 0px;
+}
+
+.things-list {
+	list-style-type: square;
+	padding: 18px;
+}
+
+.things-list li {
+	padding: 5px;
+}
+
+footer {
+	text-align: center;
+	font-size: 10pt;
+	padding: 100px;
 }
